--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   fluent_ui: ^4.4.0
   bitsdojo_window: ^0.1.6
-  window_manager: ^0.4.2
   system_theme: ^3.1.0
+  go_router: ^14.2.7
 
 dev_dependencies:
   flutter_test:
