--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   bitsdojo_window: ^0.1.6
   system_theme: ^3.1.0
   go_router: ^14.2.7
+  file_picker: ^8.1.2
+  process_run: ^1.2.0+3
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
