--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   fluent_ui: ^4.4.0
-  bitsdojo_window: ^0.1.6
+  window_manager: ^0.4.2
   system_theme: ^3.1.0
   go_router: ^14.2.7
   file_picker: ^8.1.2
@@ -29,3 +29,5 @@ flutter:
     - family: NotoSans
       fonts:
         - asset: assets/fonts/NotoSans-VariableFont_wdth,wght.ttf
+  assets:
+    - assets/bin/
