--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   file_picker: ^8.1.2
   process_run: ^1.2.0+3
   path: ^1.9.0
+  desktop_drop: ^0.5.0
+  mime: ^2.0.0
 
 dev_dependencies:
   flutter_test:
