--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "mediashin" "\0"
+            VALUE "CompanyName", "alberterc" "\0"
+            VALUE "FileDescription", "Mediashin" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "mediashin" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 alberterc. All rights reserved." "\0"
             VALUE "OriginalFilename", "mediashin.exe" "\0"
             VALUE "ProductName", "mediashin" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
