--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   path: ^1.9.0
   desktop_drop: ^0.5.0
   mime: ^2.0.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -30,5 +31,3 @@ flutter:
     - family: NotoSans
       fonts:
         - asset: assets/fonts/NotoSans-VariableFont_wdth,wght.ttf
-  assets:
-    - assets/bin/
