--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mediashin
 description: "Windows Graphics User Interface for basic video tools."
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.1.0+1
 
 environment:
   sdk: ^3.5.2
@@ -18,6 +18,7 @@ dependencies:
   desktop_drop: ^0.5.0
   mime: ^2.0.0
   url_launcher: ^6.3.1
+  package_info_plus: ^8.2.1
 
 dev_dependencies:
   flutter_test:
@@ -31,3 +32,5 @@ flutter:
     - family: NotoSans
       fonts:
         - asset: assets/fonts/NotoSans-VariableFont_wdth,wght.ttf
+  assets:
+    - assets/images/mediashin-logo.png
