--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -93,7 +93,7 @@ BEGIN
             VALUE "FileDescription", "Mediashin" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "mediashin" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 alberterc. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024-2025 alberterc. All rights reserved." "\0"
             VALUE "OriginalFilename", "mediashin.exe" "\0"
             VALUE "ProductName", "mediashin" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
